// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Default Level 1`] = `
<span
  className="ola_level"
/>
`;

exports[`Level Variant High 1`] = `
<span
  className="ola_level is-high"
/>
`;

exports[`Level Variant Low 1`] = `
<span
  className="ola_level is-low"
/>
`;

exports[`Level Variant Medium 1`] = `
<span
  className="ola_level is-medium"
/>
`;
